--- a/web-scraping (3).ipynb
+++ b/web-scraping (3).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "98cb8b5d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "903cf440",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "d51d3940",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "645e733b",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "10b3cd3d",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bda14b53",
    "metadata": {},
    "outputs": [],
@@ -305,22 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "270eeb6c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'player_links' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Loop through first 5 players\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, url \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43mplayer_links\u001b[49m[:\u001b[38;5;241m5\u001b[39m]):\n\u001b[0;32m      3\u001b[0m     \n\u001b[0;32m      4\u001b[0m     \u001b[38;5;66;03m# Get the HTML and soup of the player\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     html \u001b[38;5;241m=\u001b[39m get_web_page(url)\n\u001b[0;32m      6\u001b[0m     soup \u001b[38;5;241m=\u001b[39m bs(html, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'player_links' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loop through first 5 players\n",
     "for i, url in enumerate(player_links[:5]):\n",
@@ -435,30 +423,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b8fe274-e64b-49f2-b392-0d60ba6cc9ef",
+   "id": "e60f20ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert list of player dictionaries to DataFrame\n",
+    "# Convert player dictionaries to df\n",
     "df = pd.DataFrame(pipeline_list)\n",
     "\n",
-    "# Standardize column names to avoid spaces/case issues\n",
-    "df.columns = [c.strip().lower().replace(\" \", \"_\") for c in df.columns]\n",
-    "\n",
-    "# --- Compute averages for list-based or single-value stats ---\n",
+    "# standardize column\n",
+    "df.columns = [c.strip().lower().replace(\" \", \"_\") for c in df.columns]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "562a5df0",
+   "metadata": {},
+   "source": [
+    "#### Get averages for mp p ft and b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c08f42fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for col, new_col in [\n",
     "    (\"minutes_played\", \"avg_minutes\"),\n",
     "    (\"points\", \"avg_points\"),\n",
     "    (\"free_throws\", \"avg_free_throws\"),\n",
-    "    (\"blocks\", \"avg_blocks\")\n",
-    "]:\n",
+    "    (\"blocks\", \"avg_blocks\")]:\n",
+    "    # get average * help from chatGPT\n",
     "    if col in df.columns:\n",
     "        df[new_col] = df[col].apply(\n",
     "            lambda x: round(sum(x)/len(x), 1) if isinstance(x, list) and len(x) > 0\n",
     "            else round(float(x), 1) if x is not None else 0\n",
     "        )\n",
+    "    # if nothing return 0\n",
     "    else:\n",
-    "        df[new_col] = 0\n",
+    "        df[new_col] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b8fe274-e64b-49f2-b392-0d60ba6cc9ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "# Drop the original list or raw columns (except total_games)\n",
     "for col in [\"minutes_played\", \"points\", \"free_throws\", \"blocks\"]:\n",
