--- a/web-scraping (3).ipynb
+++ b/web-scraping (3).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "98cb8b5d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "903cf440",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "d51d3940",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "645e733b",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "10b3cd3d",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bda14b53",
    "metadata": {},
    "outputs": [],
@@ -271,28 +271,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e5b0b74f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'letter_links' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Step 3: Gather all player links from A–Z pages\u001b[39;00m\n\u001b[0;32m      3\u001b[0m player_links \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m letter_url \u001b[38;5;129;01min\u001b[39;00m \u001b[43mletter_links\u001b[49m:\n\u001b[0;32m      9\u001b[0m     page \u001b[38;5;241m=\u001b[39m get_web_page(letter_url)\n\u001b[0;32m     11\u001b[0m     soup \u001b[38;5;241m=\u001b[39m bs(page, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'letter_links' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# List of Links\n",
+    "# Step 3: Gather all player links from A–Z pages\n",
+    "\n",
     "player_links = []\n",
     "\n",
-    "# Loop through the URLs and obtain HTML returns of those pages\n",
+    "\n",
+    "\n",
     "for letter_url in letter_links:\n",
+    "\n",
     "    page = get_web_page(letter_url)\n",
+    "\n",
     "    soup = bs(page, \"html.parser\")\n",
     "\n",
-    "    # From HTML get the extact player pages\n",
+    "\n",
+    "\n",
+    "    # Each player is linked in a table under <th data-stat='player'>\n",
+    "\n",
     "    for a in soup.select(\"th[data-stat='player'] a\"):\n",
+    "\n",
     "        href = a.get(\"href\")\n",
+    "\n",
     "        if href:\n",
+    "\n",
     "            player_links.append(base + href)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    # Sleep 1 second between letter pages\n",
+    "\n",
     "    time.sleep(1)\n",
     "\n",
-    "# Print out total player links\n",
+    "\n",
+    "\n",
     "print(f\"Collected {len(player_links)} player profile links.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b36ea74b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'player_links' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mplayer_links\u001b[49m[:\u001b[38;5;241m5\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'player_links' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(player_links[:5])  # Check if you actually have 5 different URLs"
    ]
   },
   {
@@ -307,7 +357,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "270eeb6c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Loop through first 5 players\n",
@@ -322,6 +374,8 @@
     "\n",
     "    # Get p tags\n",
     "    p_tags = soup.find_all(\"p\")\n",
+    "    position = \"N/A\"\n",
+    "    weight = None\n",
     "\n",
     "    # Converts each paragraph into text\n",
     "    for p in p_tags:\n",
@@ -379,15 +433,13 @@
     "        blocks = float(blk_tags[-1].text.strip()) if blk_tags and blk_tags[-1].text.strip() else 0\n",
     "        \n",
     "        # games total\n",
+    "        total_games = 0\n",
     "        games_label = soup.find(\"span\", {\"class\": \"poptip\", \"data-tip\": \"Games\"})\n",
     "        if games_label:\n",
     "            # find the p tag and get the total game\n",
     "            p_tag = games_label.find_next(\"p\")\n",
     "            if p_tag and p_tag.text.strip().isdigit():\n",
     "                total_games = int(p_tag.text.strip())\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "        # Create a big dictionary for each player with their corresponding stats\n",
     "        player_dict = {\n",
@@ -409,7 +461,7 @@
     "\n",
     "# Review collected data\n",
     "print(f\"\\nTotal players scraped: {len(pipeline_list)}\")\n",
-    "pipeline_list\n"
+    "print(pipeline_list[:5])"
    ]
   },
   {
@@ -423,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e60f20ad",
+   "id": "3ab39588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562a5df0",
+   "id": "c30e9099",
    "metadata": {},
    "source": [
     "#### Get averages for mp p ft and b"
@@ -445,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c08f42fa",
+   "id": "7c62ad51",
    "metadata": {},
    "outputs": [],
    "source": [
