--- a/web-scraping (3).ipynb
+++ b/web-scraping (3).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "98cb8b5d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "903cf440",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d51d3940",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "645e733b",
    "metadata": {},
    "outputs": [],
@@ -103,18 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "10b3cd3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Oops! Received status code 429\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if status == 200:\n",
     "    page = response.text\n",
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bda14b53",
    "metadata": {},
    "outputs": [],
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2fd722e7",
    "metadata": {},
    "outputs": [],
@@ -218,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b5d3c6c3",
    "metadata": {},
    "outputs": [],
@@ -237,10 +229,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "75a709ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 25 letter pages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\bs4\\__init__.py:435: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Finds all comments in HTML\n",
     "comments = soup.find_all(string=lambda text: isinstance(text, Comment))\n",
@@ -271,78 +279,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e5b0b74f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'letter_links' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Step 3: Gather all player links from A–Z pages\u001b[39;00m\n\u001b[0;32m      3\u001b[0m player_links \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m letter_url \u001b[38;5;129;01min\u001b[39;00m \u001b[43mletter_links\u001b[49m:\n\u001b[0;32m      9\u001b[0m     page \u001b[38;5;241m=\u001b[39m get_web_page(letter_url)\n\u001b[0;32m     11\u001b[0m     soup \u001b[38;5;241m=\u001b[39m bs(page, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'letter_links' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collected 5372 player profile links.\n"
      ]
     }
    ],
    "source": [
-    "# Step 3: Gather all player links from A–Z pages\n",
-    "\n",
+    "# Empty List\n",
     "player_links = []\n",
     "\n",
-    "\n",
-    "\n",
+    "# loop through links and get pages\n",
     "for letter_url in letter_links:\n",
-    "\n",
     "    page = get_web_page(letter_url)\n",
-    "\n",
     "    soup = bs(page, \"html.parser\")\n",
     "\n",
-    "\n",
-    "\n",
-    "    # Each player is linked in a table under <th data-stat='player'>\n",
-    "\n",
+    "    # Get each player table\n",
     "    for a in soup.select(\"th[data-stat='player'] a\"):\n",
-    "\n",
     "        href = a.get(\"href\")\n",
-    "\n",
+    "        # Add url to player link\n",
     "        if href:\n",
-    "\n",
     "            player_links.append(base + href)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "    # Sleep 1 second between letter pages\n",
-    "\n",
     "    time.sleep(1)\n",
     "\n",
-    "\n",
-    "\n",
+    "# print\n",
     "print(f\"Collected {len(player_links)} player profile links.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b36ea74b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'player_links' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mplayer_links\u001b[49m[:\u001b[38;5;241m5\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'player_links' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(player_links[:5])  # Check if you actually have 5 different URLs"
    ]
   },
   {
@@ -355,12 +322,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "270eeb6c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 1/5372 players...\n",
+      "Processed 2/5372 players...\n",
+      "Processed 3/5372 players...\n",
+      "Processed 4/5372 players...\n",
+      "Processed 5/5372 players...\n",
+      "\n",
+      "Total players scraped: 26\n",
+      "[{'name': 'Alaa Abdelnaby', 'position': 'Power Forward', 'weight': 240, 'minutes played': [6.7, 13.2, 17.5, 13.3, 18.3, 12.2, 9.4, 9.3, 10.0, 12.5, 10.7, 17.3, 9.3, 13.3, 10.0, 2.6, 3.1, 17.0, 6.2, 2.9, 17.0], 'points': [3.1, 6.1, 7.7, 5.3, 8.2, 4.9, 4.7, 5.0, 0.7, 5.7, 5.0, 7.6, 5.0, 5.3, 0.7, 0.8, 1.5, 5.5, 2.2, 1.2, 5.5], 'free_throws': [1.0, 1.4, 1.5, 1.3, 1.6, 1.9, 0.6, 0.7, 0.0, 1.3, 1.3, 1.6, 0.7, 1.3, 0.0, 0.0, 0.5, 0.0, 0.2, 0.3, 0.0], 'blocks': 0.3, 'total_games': 256}, {'name': 'Zaid Abdul-Aziz', 'position': 'Center and Power Forward', 'weight': 235, 'minutes played': [19.3, 5.4, 28.9, 20.5, 20.9, 30.7, 18.8, 31.1, 22.3, 8.3, 8.9, 9.9, 12.0, 9.6, 21.8, 24.0, 22.5, 22.7, 8.9, 5.4, 12.0, 11.7, 11.3, 12.0, 11.7, 11.7, 11.3, 12.0], 'points': [7.3, 1.9, 11.0, 7.4, 10.9, 13.8, 8.7, 10.9, 9.7, 3.2, 3.8, 3.9, 4.0, 3.9, 9.0, 9.5, 10.6, 8.4, 3.8, 1.9, 4.0, 4.3, 4.3, 7.2, 5.1, 4.3, 4.3, 7.2], 'free_throws': [2.3, 0.4, 3.7, 2.3, 3.1, 3.7, 3.4, 3.0, 3.1, 1.1, 2.0, 1.4, 1.5, 1.4, 2.8, 3.0, 3.0, 2.7, 2.0, 0.4, 1.5, 1.4, 0.8, 2.2, 1.4, 1.4, 0.8, 2.2], 'blocks': 1.0, 'total_games': 505}, {'name': 'Kareem Abdul-Jabbar', 'position': 'Center', 'weight': 225, 'minutes played': [43.1, 40.1, 44.2, 42.8, 43.8, 42.3, 41.2, 36.8, 36.5, 39.5, 38.3, 37.2, 35.2, 32.3, 32.8, 33.3, 33.3, 31.3, 28.9, 22.9, 36.8, 34.3, 42.7, 43.5, 41.2, 46.4, 46.0, 47.4, 42.5, 44.7, 45.9, 41.2, 44.7, 35.2, 39.2, 36.5, 32.1, 34.9, 31.1, 29.9, 23.4, 37.3, 35.0, 44.8], 'points': [28.8, 31.7, 34.8, 30.2, 27.0, 30.0, 27.7, 26.2, 25.8, 23.8, 24.8, 26.2, 23.9, 21.8, 21.5, 22.0, 23.4, 17.5, 14.6, 10.1, 24.6, 22.1, 30.4, 35.2, 26.6, 28.7, 22.8, 32.2, 34.6, 27.0, 28.5, 31.9, 26.7, 20.4, 27.1, 23.9, 21.9, 25.9, 19.2, 14.1, 11.1, 24.3, 22.6, 29.7], 'free_throws': [9.1, 8.3, 9.0, 6.1, 5.2, 6.6, 7.8, 6.5, 5.6, 5.9, 5.8, 6.9, 5.8, 4.7, 4.9, 5.0, 5.6, 4.4, 3.4, 2.2, 6.0, 5.3, 7.4, 10.1, 7.2, 4.9, 5.8, 5.7, 10.9, 3.0, 7.8, 7.0, 9.3, 6.2, 7.1, 5.7, 5.4, 4.4, 6.8, 3.0, 2.9, 6.0, 5.8, 6.7], 'blocks': 2.4, 'total_games': 1560}, {'name': 'Mahmoud Abdul-Rauf', 'position': 'Point Guard', 'weight': 162, 'minutes played': [22.5, 19.0, 33.5, 32.7, 28.5, 35.6, 28.4, 17.1, 11.9, 26.7, 28.4, 25.1, 11.9, 28.3, 25.3, 27.7], 'points': [14.1, 10.3, 19.2, 18.0, 16.0, 19.2, 13.7, 7.3, 6.5, 14.6, 16.0, 11.9, 6.5, 12.9, 13.3, 13.0], 'free_throws': [1.5, 1.3, 2.9, 2.9, 2.1, 2.8, 1.8, 0.5, 0.7, 2.0, 2.2, 1.4, 0.7, 2.6, 4.7, 3.0], 'blocks': 0.1, 'total_games': 586}, {'name': 'Tariq Abdul-Wahad', 'position': 'Shooting Guard', 'weight': 223, 'minutes played': [16.3, 24.6, 25.9, 26.2, 24.9, 14.5, 18.4, 20.9, 6.0, 14.6, 20.4, 18.9, 20.0, 12.7, 26.2, 19.8, 9.9, 13.7, 9.9, 19.8], 'points': [6.4, 9.3, 11.4, 12.2, 8.9, 3.8, 5.6, 6.8, 0.0, 4.1, 7.8, 5.9, 7.7, 3.2, 12.2, 8.6, 3.1, 5.2, 3.1, 8.6], 'free_throws': [2.1, 2.8, 3.2, 3.3, 2.8, 1.2, 1.4, 1.6, 0.3, 0.4, 2.2, 1.7, 2.4, 0.4, 3.3, 3.2, 1.0, 1.8, 1.0, 3.2], 'blocks': 0.8, 'total_games': 236}]\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop through first 5 players\n",
     "for i, url in enumerate(player_links[:5]):\n",
@@ -373,6 +355,7 @@
     "    name = soup.find(\"h1\").find(\"span\").text.strip() if soup.find(\"h1\") else \"N/A\"\n",
     "\n",
     "    # Get p tags\n",
+    "    position_tag = soup.find(\"p\")\n",
     "    p_tags = soup.find_all(\"p\")\n",
     "    position = \"N/A\"\n",
     "    weight = None\n",
@@ -437,7 +420,7 @@
     "        games_label = soup.find(\"span\", {\"class\": \"poptip\", \"data-tip\": \"Games\"})\n",
     "        if games_label:\n",
     "            # find the p tag and get the total game\n",
-    "            p_tag = games_label.find_next(\"p\")\n",
+    "            p_tag = games_label.find_next(\"p\").find_next(\"p\")\n",
     "            if p_tag and p_tag.text.strip().isdigit():\n",
     "                total_games = int(p_tag.text.strip())\n",
     "\n",
@@ -453,13 +436,13 @@
     "        \"total_games\": total_games\n",
     "        }\n",
     "        \n",
-    "        # Add to pipeline list\n",
-    "        pipeline_list.append(player_dict)\n",
+    "    # Add to pipeline list\n",
+    "    pipeline_list.append(player_dict)\n",
+    "    if i % 1 == 0:\n",
+    "        print(f\"Processed {i+1}/{len(player_links)} players...\")\n",
     "    \n",
     "    # sleep between requests\n",
     "    time.sleep(2)\n",
-    "\n",
-    "# Review collected data\n",
     "print(f\"\\nTotal players scraped: {len(pipeline_list)}\")\n",
     "print(pipeline_list[:5])"
    ]
@@ -474,8 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ab39588",
+   "execution_count": 16,
+   "id": "066df947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30e9099",
+   "id": "acf5e53e",
    "metadata": {},
    "source": [
     "#### Get averages for mp p ft and b"
@@ -496,8 +479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c62ad51",
+   "execution_count": 17,
+   "id": "ee64ed7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,10 +502,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3b8fe274-e64b-49f2-b392-0d60ba6cc9ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>avg_minutes</th>\n",
+       "      <th>avg_points</th>\n",
+       "      <th>avg_free_throws</th>\n",
+       "      <th>avg_blocks</th>\n",
+       "      <th>total_games</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alaa Abdelnaby</td>\n",
+       "      <td>Power Forward</td>\n",
+       "      <td>240</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Zaid Abdul-Aziz</td>\n",
+       "      <td>Center and Power Forward</td>\n",
+       "      <td>235</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kareem Abdul-Jabbar</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>225</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>25.1</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mahmoud Abdul-Rauf</td>\n",
+       "      <td>Point Guard</td>\n",
+       "      <td>162</td>\n",
+       "      <td>25.2</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Tariq Abdul-Wahad</td>\n",
+       "      <td>Shooting Guard</td>\n",
+       "      <td>223</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>236</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  name                  position  weight  avg_minutes  \\\n",
+       "0       Alaa Abdelnaby             Power Forward     240         11.0   \n",
+       "1      Zaid Abdul-Aziz  Center and Power Forward     235         15.9   \n",
+       "2  Kareem Abdul-Jabbar                    Center     225         38.0   \n",
+       "3   Mahmoud Abdul-Rauf               Point Guard     162         25.2   \n",
+       "4    Tariq Abdul-Wahad            Shooting Guard     223         18.2   \n",
+       "\n",
+       "   avg_points  avg_free_throws  avg_blocks  total_games  \n",
+       "0         4.4              0.8         0.3          256  \n",
+       "1         6.6              2.1         1.0          505  \n",
+       "2        25.1              6.1         2.4         1560  \n",
+       "3        13.3              2.1         0.1          586  \n",
+       "4         6.7              2.0         0.8          236  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "\n",
